new version of personal site ready

--- a/bio.html
+++ b/bio.html
@@ -32,11 +32,13 @@
 							<section id="content" class="main">
 								<!--<span class="image main"><img src="images/pic04.jpg" alt="" /></span> -->
 								<h2>Timeline</h2>
-								<p> 
-								<p>Since <b> 2016 </b> I hold my <b>MEng from the department of Electical and Computer Engineering of National Technical University of Athens (NTUA) </b>. My major was in computer science any my thesis was named "Data mining from twitter and application of unsupervised machine learning for text clustering". In parallel with my studies, I worked as a software engineer for more than a year.</p>
-								<p>In <b>2017 </b>, I got my <b> MSc in machine learning from University College London (UCL)</b> My thesis was on computer vision with the name "Psychophysics for Interpretation of Convolutional Neural Networks and Localization". </p>
-								<p>From <b>2017 to 2020 I have worked as a machine learning scientist.</b> Most of this time I was part of the Data Intelligence team of Samsung Research UK </p>
-								<p>Since April <b>2020</b>, I am a <b>PhD candidate at University College London (UCL) </b>. My focus is on biodiversity monitoring with machine learning. <p>
+						
+								</ul> 
+									<li><b>MEng in Electrical and Computer Engineering from National Technical University of Athens (NTUA) </b> with major in computer science. While studying, I worked as a software engineer for more than a year.</li>
+									<li> <b>MSc in machine learning from University College London (UCL)</b>. My thesis was on computer vision with the name "Psychophysics for Interpretation of Convolutional Neural Networks and Localization". </li>
+									<li>From 2017 to 2020 I had been working as a <b>machine learning scientist.</b> Most of this time I was part of the Data Intelligence team of <b>Samsung Research UK</b>.
+									<li>Currently a <b>PhD student at University College London (UCL) </b>. My focus is on biodiversity monitoring with machine learning. </li>
+								</ul>
 								<!--
 								<h2>Tempus veroeros</h2>
 								<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
