updated list of published papers

--- a/bio.html
+++ b/bio.html
@@ -38,7 +38,7 @@
 									<li> <b>MSc in machine learning from University College London (UCL)</b>. My thesis was on computer vision with the name "Psychophysics for Interpretation of Convolutional Neural Networks and Localization". </li>
 									<li>From 2017 to 2020 I had been working as a <b>machine learning scientist.</b> Most of this time I was part of the Data Intelligence team of <b>Samsung Research UK</b>.
 									<li>Currently a <b>PhD student at University College London (UCL) </b>. My focus is on biodiversity monitoring with machine learning. </li>
-									<li>So far, during my PhD I have also spent time working for <b>MIT</b> as a Research associate and <b>iRobot</b> as a machine learning scientist.</li>
+									<li>So far, during my PhD I have also spent time working for <b>MIT</b> as a research associate and <b>iRobot</b> as a machine learning scientist.</li>
 								</ul>
 								<!--
 								<h2>Tempus veroeros</h2>
